# timestretch-rs

./: .gitignore  AGENT_PROMPT.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DUAL_PLANE_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  README.md  REFACTOR.md  RESEARCH.md  metamorph.toml  run-benchmark-quality-example.sh  samples  test_manifest.json
.claude/commands/: timestretch-maintainer.md
.github/workflows/: ci.yml
benchmarks/: README.md  manifest.toml  run_m0_baseline.sh
benchmarks/baselines/: README.md  m0_baseline_20260226T021840Z.json  m0_baseline_20260302T030325Z.json
desktop/: Cargo.toml
desktop/src/: app.rs  audio_engine.rs  decoder.rs  main.rs  processor.rs  state.rs  waveform.rs
examples/: basic_stretch.rs  benchmark_quality.rs  dj_beatmatch.rs  dj_mix.rs  pitch_shift.rs  realtime_stream.rs  sample_halftime.rs
optimize/: .gitignore  Makefile  README.md  config.toml
optimize/ableton/: .gitignore  Makefile  README.md  ableton_manifest.json  library_manifest.json  requirements.txt  track_catalog.json
optimize/agents/: claude_code.sh  codex.sh  common.sh  stream_filter.py
optimize/scripts/: agent_prompt.md.tmpl  generate_references.sh  generate_samples.sh  optimize_loop.sh  report.py  run_test_suite.py  score.py
skills/timestretch-arch-perf-review/: SKILL.md
skills/timestretch-maintainer/: SKILL.md
src/: cli.rs  error.rs  lib.rs
src/analysis/: adaptive_snapshot.rs  beat.rs  comparison.rs  frequency.rs  hpss.rs  mod.rs  preanalysis.rs  transient.rs
src/core/: crossover.rs  fft.rs  mod.rs  preanalysis.rs  resample.rs  ring_buffer.rs  types.rs  window.rs
src/dual_plane/: analysis_plane.rs  engine.rs  hints.rs  mod.rs  quality.rs  rt.rs  warp_map.rs
src/io/: mod.rs  wav.rs
src/stream/: mod.rs  processor.rs  (+1 more)
test_audio/: generate.rs
tests/: algorithm_edge_cases.rs  band_split.rs  benchmarks.rs  bpm_stretch.rs  buffer_workflows.rs  coverage_gaps.rs  creative_effects.rs  dj_workflows.rs  dual_plane_parity.rs  dual_plane_rt.rs  edge_cases.rs  edm_presets.rs  hybrid_streaming.rs  identity.rs  new_features.rs  new_features_2.rs  parity_quality_notes.md  pitch_shift.rs  preanalysis_pipeline.rs  quality.rs  quality_benchmark.rs  quality_gates.rs  realtime_allocations.rs  realtime_dj_conditions.rs  reference_quality.rs  rubberband_comparison.rs  spectral_quality.rs  streaming.rs  streaming_batch_parity.rs  streaming_edge_cases.rs  stretch_quality_regressions.rs  timeline_length.rs  wav_error_paths.rs  wav_roundtrip.rs
timestretch_rt/: Cargo.toml
web/: Cargo.toml  README.md  app.js  index.html  processor.js  style.css
(+38 files in other folders)
