[package]
name = "timestretch"
version = "0.1.0"
edition = "2021"
description = "Pure Rust audio time stretching library optimized for EDM"
license = "MIT"
rust-version = "1.82"
keywords = ["audio", "dsp", "time-stretching", "phase-vocoder", "edm"]
categories = ["multimedia::audio", "algorithms"]
readme = "README.md"

[dependencies]
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "timestretch-cli"
path = "src/cli.rs"
required-features = ["cli"]

[[example]]
name = "generate_test_audio"
path = "test_audio/generate.rs"

[features]
cli = []

[dev-dependencies]
toml = "0.8"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
